# ASL

./: 1.py  3.py  4.py  5.py  6.py  collect_imgs.py  data.pickle  data1.pickle  gemini_api.py  generate_hand_landmark_dataset.py  gradio_app.py  inference_classifier.py  model.p  model1.p  pyproject.toml  second.py  sign_language_recognition7.py  train_classifier.py
app/: main.py
app/asl_model/: gemini_api.py  sign_language_recognition7.py
app/templates/: index.html
gradio-env/: pyvenv.cfg
gradio-env/Scripts/: activate  activate.bat
scripts/: collect_imgs.py  create_dataset.py  generate_hand_landmark_dataset.py  train_classifier.py
