[project]
name = "detector"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pickl = "^0.3.0"
mediapipe = "^0.10.21"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
